<resources>
    <string name="app_name">Tra Temptation</string>
    <string name="phoneNumber">Phone Num</string>
    <string name="yourPhoneNumber">Your Phone Num</string>
    <string name="referrerPhone">[Opt] Referrer Phone</string>
    <string name="invalidReferrerId">Invalid Referrer Phone Num</string>
    <string name="missingCredit">Credits Before Free</string>
    <string name="todayCredit">Drinks Purchase Today</string>
    <string name="previousCredit">Previous Credit</string>
    <string name="freeDrinkAchieved">Next drink is FREE</string>
    <string name="optIn">Please text me promotion info (We will not share your phone number with anyone)</string>
    <string name="btnConfirm">Confirm</string>
    <string name="cancelBtn">Cancel</string>
    <string name="clearBtn">Clear</string>
    <string name="phone_err_msg">Please enter a 10-digit phone number</string>
    <string name="todayCredit_err_msg">Please enter a number less than 10</string>
    <string name="welcomeText">Welcome to Tra Temptation\'s reward program</string>
    <string name="receiptNum">Receipt Number</string>
    <string name="receipt_err_msg">Invalid receipt number</string>
    <string name="tab_registration">Sign-Up/Check-in</string>
    <string name="tab_claim">Claim</string>
    <string name="tab_admin">Admin</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_customer">Customer</string>
    <string name="tab_scheduledBroadcast">Scheduled Broadcast</string>
    <string name="tab_transactions">Transactions</string>
    <string name="tab_text">Text</string>
    <string name="freeDrink">Free Drinks Available</string>
    <string name="freeDrinkClaimToday">Amount Claim Today</string>
    <string name="claimCode">Claim Code</string>
    <string name="getCode">Get Code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnClaim">Claim</string>
    <string name="getCodeMsg_freeDrink">Please use this code to claim your free drink: %s</string>
    <string name="getCodeMsg_promo">Please use this code to claim your promotion: %s</string>
    <string name="claimCode_err_msg">Invalid code</string>
    <string name="claimSuccess_msg">Success! Claim code is valid</string>
    <string name="claimSuccess_msg_textSent">Success! Claim code is valid. Confirmation sent</string>
    <string name="update_success_msg">Successfully updated drink credit</string>
    <string name="purchase_conf_msg_notFree">Thank you for your purchase at Tra Temptation. Credit earned today: %d, total credit: %.1f. Need %.1f more and get 1 standard drink free!</string>
    <string name="purchase_conf_msg_free">Thank you for your purchase at Tra Temptation. Credit earned today: %d, total credit: %.1f. Please use this code to claim your free standard drink: %s</string>
    <string name="cashier_toast_msg_sent">Drinks updated and confirmation sent</string>
    <string name="freeDrink_claim">free drink</string>
    <string name="discount_claim_text">discount</string>
    <string name="freeDrink_notice">You have earned 1 free drink at Tra Temptation. Please use this code to claim: %s</string>
    <string name="successfulClaim_text">Thank you for claiming your free drink. Your total credit resets to %.1f</string>
    <string name="singlePurchaseLimitAlert">%s, drinkPurchased: %d, receiptNum: %d, time: %s</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="unsubscribe">Opt Out</string>
    <string name="adminCode">Admin Code</string>
    <string name="adminCodeTextMsg">Admin code: %s</string>
    <string name="adminCodeSentToastMsg">Admin code sent</string>
    <string name="dbLocation">Db Location</string>
    <string name="importLabel">Import</string>
    <string name="exportLabel">Export</string>
    <string name="dbExportSuccess">Database exported successfully</string>
    <string name="dbExportFail">Database export FAILED</string>
    <string name="dbImportSuccess">Database imported successfully from %s</string>
    <string name="dbImportFailed">Database import FAILED from %s</string>
    <string name="search">Search</string>
    <string name="optOutSuccess">Unsubscribed successfully</string>
    <string name="purchaseDate">Date</string>
    <string name="quantity">Amt</string>
    <string name="note">Note</string>
    <string name="recNum">Rec#</string>
    <string name="addAdmin">Add Admin</string>
    <string name="removeAdmin">Remove Admin</string>
    <string name="addTestUer">Add Test User</string>
    <string name="removeTestUser">Remove Test User</string>
    <string name="adminUserAddSuccess">Admin user added successfully</string>
    <string name="adminUserAddFail">FAILED to add admin user</string>
    <string name="adminUserRemoveSuccess">Admin user removed successfully</string>
    <string name="adminUserRemoveFail">FAILED to remove admin user</string>
    <string name="testUserAddSuccess">Test user added successfully</string>
    <string name="testUserAddFail">FAILED to add test user</string>
    <string name="testUserRemoveSuccess">Test user removed successfully</string>
    <string name="testUserRemoveFail">FAILED to remove test user</string>
    <string name="dailyCashierCodeSent">Cashier Code Sent</string>
    <string name="to">--</string>
    <string name="daysSinceLastText">DAYS NOT TEXTED</string>
    <string name="daysNotVisitedText">DAYS NOT VISITED</string>
    <string name="totalDrinkCreditText">DRINK CREDITS</string>
    <string-array name="lastVisitOrTotalCreditDropDownList">
        <item>@string/daysNotVisitedText</item>
        <item>@string/totalDrinkCreditText</item>
    </string-array>
    <string name="orderBy">order by</string>
    <string name="asc">asc</string>
    <string name="desc">desc</string>
    <string-array name="ascDescDropDownList">
        <item>@string/asc</item>
        <item>@string/desc</item>
    </string-array>
    <string-array name="orderByDropDownList">
        <item>@string/daysNotVisitedText</item>
        <item>@string/totalDrinkCreditText</item>
        <item>@string/daysSinceLastText</item>
    </string-array>
    <string name="purchaseType">Purchase</string>
    <string name="drinkClaimType">Drink Claim</string>
    <string name="discountClaimType">Discount Claim</string>
    <string-array name="transactionTypes">
        <item>@string/drinkClaimType</item>
        <item>@string/purchaseType</item>
    </string-array>
    <string name="numericOnlyInput">Numeric Only</string>
    <string name="orderByTime">TIME</string>
    <string name="orderByQuantity">Amount</string>
    <string-array name="transactionOrderByDropDownList">
        <item>@string/orderByTime</item>
        <item>@string/orderByQuantity</item>
    </string-array>
    <string name="freeDrinkAfterReferralCredit">Your referral just made a purchase at Tra Temptation! You have %.1f total credit. Please use this code to claim your free standard drink: %s</string>
    <string name="firstReferralPurchaseMissingCredit">Thank you for making referrals to Tra Temptation! You just earned %.1f referral credits. Your total credit is %.1f, and need %.1f more for a free drink</string>
    <string name="broadcastToCustomerLabel">Message(use %s for claim code place holder)</string>
    <string name="recipients">Customers(%d)</string>
    <string name="textNow">TEXT NOW</string>
    <string name="schedule">SCHEDULE</string>
    <string-array name="textActionDropdownList">
        <item>@string/textNow</item>
        <item>@string/schedule</item>
    </string-array>
    <string name="testUsers">TEST USERS</string>
    <string name="realUsers">CUSTOMERS</string>
    <string-array name="userTypeDropdown">
        <item>@string/testUsers</item>
        <item>@string/realUsers</item>
    </string-array>
    <string-array name="hourDropdown">
        <item>10:30</item>
        <item>11:30</item>
        <item>12:30</item>
        <item>13:30</item>
        <item>14:30</item>
        <item>15:30</item>
        <item>16:30</item>
        <item>17:30</item>
        <item>18:30</item>
        <item>19:30</item>
        <item>20:30</item>
        <item>21:30</item>
    </string-array>
    <string name="templateQuery">PRESET QUERY</string>
    <string name="queryType_inactiveOldPromo">PROMO REM</string>
    <string name="queryType_inactiveNewPromo">PROMO NEW</string>
    <string name="queryType_drinkCreditReminder">CREDIT REM</string>
    <string name="queryType_none">NONE</string>
    <string-array name="queryTypeDropdown">
        <item>@string/queryType_none</item>
        <item>@string/queryType_inactiveOldPromo</item>
        <item>@string/queryType_inactiveNewPromo</item>
        <item>@string/queryType_drinkCreditReminder</item>
    </string-array>
    <string name="availPromo">Available Promotion</string>
    <string name="drinkCreditReminderMessage">You have %.1f drink credits at Tra Temptation, buy %.1f more and get 1 free!</string>
    <string name="inactiveUser_sendPromo">Congratulations on winning the Tra Temptation raffle. Please use this code for {promo}: %s</string>
    <string name="inactiveUser_promoReminder">{promo} promotion is waiting for you at Tra Temptation! Please use this code to claim: %s</string>
    <string name="broadcastStatus_sent">SENT</string>
    <string name="broadcastStatus_ready">READY</string>
    <string name="broadcastStatus_all">ALL</string>
    <string-array name="broadcastStatusDropdown">
        <item>@string/broadcastStatus_ready</item>
        <item>@string/broadcastStatus_sent</item>
        <item>@string/broadcastStatus_all</item>
    </string-array>
    <string name="promoDisplayName">Promotion Name (to show on Claim Tab)</string>
    <string name="dbAccessToken">xrFncsgDuhoAAAAAAAAEznCuMZiIQTDjglRe-VMHR21BdZmguRaje9IWpL5sQx9l</string>
    <string name="changePhoneNum">change number</string>
</resources>
