<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp">
        <TextView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_column="0"
            android:padding="10sp"
            android:gravity="center"
            android:text="@string/purchaseDate"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary">
        </TextView>
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_column="1"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/quantity"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary">
        </TextView>
        <TextView
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_column="2"
            android:padding="10sp"
            android:gravity="center"
            android:text="@string/note"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary">
        </TextView>
    </TableRow>


</TableLayout>