<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:clickable="true"
    android:id="@+id/claimFragment"
    tools:context="com.kpblog.tt.Fragment_Claim">

    <LinearLayout
        android:id="@+id/insertLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            app:hintTextAppearance="@style/FloatingLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:imeOptions="actionNext">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/freeDrinkLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/freeDrink"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#5c5959"
                android:hint="@string/freeDrink"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/claimCodeLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                app:hintTextAppearance="@style/FloatingLabel"
                android:layout_height="wrap_content">


                <com.kpblog.tt.util.MyEditText
                    android:id="@+id/claimCode"
                    android:inputType="numberPassword"
                    android:digits="0123456789"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/claimCode"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:visibility="invisible"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/receiptLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            app:hintTextAppearance="@style/FloatingLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/receiptNumber"
                android:inputType="numberPassword"
                android:digits="0123456789"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/receiptNum"
                android:imeOptions="actionDone" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="3dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button android:id="@+id/clearBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/clearBtn"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/getCodeBtn"
                android:enabled="false"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:text="@string/getCode"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/claimBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/btnClaim"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
