<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:clickable="true"
    android:id="@+id/adminFragment"
    tools:context="com.kpblog.tt.Fragment_Admin">

    <LinearLayout
        android:id="@+id/insertLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/adminTextBtnLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/adminCodeLayout"
                android:layout_weight="2"
                android:layout_width="0dip"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/adminCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adminCode"
                    android:inputType="phone"
                    android:imeOptions="actionNext">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/getCodeBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/getCode"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/lockUnlockBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:text="@string/unlock"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adminLayout"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/importExportFrame"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/locationInput"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dbLocation"
                        android:inputType="none"
                        android:imeOptions="actionNext">
                    </EditText>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/importExportButtonFrame"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <Button android:id="@+id/importBtn"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:layout_marginLeft="2dp"
                        android:layout_height="wrap_content"
                        android:text="@string/importLabel"
                        style="@style/buttonStyle"
                        android:textColor="@android:color/white"/>

                    <Button android:id="@+id/exportBtn"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/exportLabel"
                        style="@style/buttonStyle"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
