<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:clickable="true"
    android:id="@+id/customerFragment"
    tools:context=".Fragment_Customer">

    <LinearLayout
        android:id="@+id/insertLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="3dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/adminTextBtnLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_weight="2"
                android:layout_width="0dip"
                app:hintTextAppearance="@style/FloatingLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone"
                    android:imeOptions="actionNext">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/optOutBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="10dp"
                android:text="@string/unsubscribe"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/searchBtn"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/search"
                style="@style/buttonStyle"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>

    </LinearLayout>

</FrameLayout>